<resources>
    <string name="app_name">Wiz-Cast</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="onBoard1">On Boarding 1</string>
    <string name="onBoard2">On Boarding 2</string>
    <string name="onBoard3">on Board 3</string>
    <string name="wizcast">Wiz-Cast</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="setting">Settings</string>
    <string name="api_key">86278d2574ed52eb361602bc3e924865</string>
    <string name="mylocation">My Location</string>
    <string name="city">City</string>
    <string name="description">Description</string>
    <string name="sunrise">SunRise</string>
    <string name="sunset">SunSet</string>
    <string name="today">Today</string>
    <string name="time">Time</string>
    <string name="humidity">Humidity</string>
    <string name="randomnumber">60</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="clouds">Clouds</string>
    <string name="Fivedays">Next 5 Days</string>
    <string name="saved">Saved Locations</string>
    <string name="dynamicweather">Dynamic Live Weather</string>
    <string name="finalsplash">We got you with Notifications for alert weather</string>
    <string name="alarm">Alarm</string>
    <string name="temprature">Temprature Unit</string>
    <string name="Celesius">Celesius</string>
    <string name="tempSelect">Select Temperature Unit</string>
    <string name="SelectLanguage">Select Language</string>
    <string name="map">map</string>
    <string name="forthislocation">This Location</string>
</resources>