<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:checkable="true"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/favoriteFragment"
        android:checkable="true"
        android:icon="@drawable/twotone_favorite_24"
        android:title="@string/favorite" />
    <item
        android:id="@+id/alarmFragment"
        android:checkable="true"
        android:icon="@drawable/alarm_24"
        android:title="@string/alarm" />
    <item
        android:id="@+id/settingFragment"
        android:checkable="true"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/setting" />
</menu>